src/test/resources/predinline/errors/fold.vpr
inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(fold.failed:assertion.false)
    fold falze()
}